--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Data Science</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Provide basic machine learning algorithms "Scikit-Learn", data preprocessing "Numpy, Pandas, Matplotlib", neural newtorks "TensorFlow".</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Web Development</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Create websites and connect them to the backend using framework "Django"</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Software Development</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Make a software architecture, then test software analysis performance, and create the software using "Java" or "Python"</p>
                     </div>
                 </div>
                </div>
@@ -102,7 +102,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>I have been studying the basics of programming for two years as a software engineer, at the end of the second year I decided to change my direction to machine learning. Currently I am actively studying artificial intelligence technologies.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
